# libcoroutine

./: .clang-format  .gitignore  CMakeLists.txt
include/: coro.hpp
include/concepts/: awaitable.hpp  executor.hpp
include/libcoro/: all.hpp  event.hpp  event_fd.hpp  file.hpp  generator.hpp  io_service.hpp  ip_address.hpp  latch.hpp  multi_thread_executor.hpp  pipeline.hpp  poll.hpp  single_thread_executor.hpp  socket.hpp  sync.hpp  task.hpp
src/: add.cpp  event.cpp  event_fd.cpp  file.cpp  io_service.cpp  multi_thread_executor.cpp  single_thread_executor.cpp
tests/: CMakeLists.txt  add_test.cpp
